fix(mobile): adjusts layouts for different stories on mobile and desktop

--- a/src/app.css
+++ b/src/app.css
@@ -28,8 +28,8 @@ html,body {
 }
 
 @media print {
-  body > nav,
-  body > footer {
+  body > .layout > nav,
+  body > .layout > footer {
     display: none;
   }
 }
